// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter link 1`] = `
<a
  href="#"
  onClick={[Function]}
>
  Active
</a>
`;

exports[`renders correctly 1`] = `
<p>
  Show:
   
  <a
    href="#"
    onClick={[Function]}
  >
    All
  </a>
  , 
  <a
    href="#"
    onClick={[Function]}
  >
    Active
  </a>
  , 
  <a
    href="#"
    onClick={[Function]}
  >
    Completed
  </a>
</p>
`;
